// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AssayReimportHeader/> has batch properties 1`] = `
<div>
  <div
    class="panel panel-default"
  >
    <div
      class="panel-heading"
    >
      Re-Import Run
    </div>
    <div
      class="panel-body"
    >
      <p>
        <strong>
          Replacing Run: 
          <a
            href="#/assays/General/GPAT%201/runs/10"
          >
            Test Name
          </a>
        </strong>
      </p>
      <p>
        Edit the 
        batch and 
         run properties below or provide updated data for this assay run. Changes will be reflected in the audit history for this run.
      </p>
    </div>
  </div>
</div>
`;

exports[`<AssayReimportHeader/> no batch properties 1`] = `
<div>
  <div
    class="panel panel-default"
  >
    <div
      class="panel-heading"
    >
      Re-Import Run
    </div>
    <div
      class="panel-body"
    >
      <p>
        <strong>
          Replacing Run: 
          <a
            href="#/assays/General/GPAT%201/runs/10"
          >
            Test Name
          </a>
        </strong>
      </p>
      <p>
        Edit the 
        
         run properties below or provide updated data for this assay run. Changes will be reflected in the audit history for this run.
      </p>
    </div>
  </div>
</div>
`;
